--- a/Main/package.json
+++ b/Main/package.json
@@ -22,12 +22,13 @@
   },
   "homepage": "https://github.com/Collzbaba/Mvc-Tech-Blog#readme",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.1.0",
     "connect-session-sequelize": "^6.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.0.1",
     "pkg": "^5.8.0",
     "sequelize": "^5.21.2"
